Added CD and changes to html, workflow

--- a/website/index.html
+++ b/website/index.html
@@ -23,7 +23,8 @@
         supports <span class="less-cool-word">nginx</span> or
         <span class="less-cool-word">apache2</span>. The Dockerfile then helps
         us create our own image with
-        <span class="less-cool-word">THIS!</span> website on it.
+        <span class="less-cool-word">THIS!</span> website on it.<br />
+        This is additional text to push for tag testing purposes!
       </summary>
       <a class="gh-icon" href="https://github.com/aliAljaffer"
         ><svg
