Added less cool words?

--- a/website/index.html
+++ b/website/index.html
@@ -25,7 +25,7 @@
         us create our own image with
         <span class="less-cool-word">THIS!</span> website on it.<br />
         This is me testing the <span class="less-cool-word">Webhook</span> and
-        GH Actions.
+        <span class="less-cool-word">GH Actions</span>.
       </summary>
       <a class="gh-icon" href="https://github.com/aliAljaffer"
         ><svg
