--- a/website/index.html
+++ b/website/index.html
@@ -24,7 +24,8 @@
         <span class="less-cool-word">apache2</span>. The Dockerfile then helps
         us create our own image with
         <span class="less-cool-word">THIS!</span> website on it.<br />
-        This is me testing the <span class="less-cool-word">Webhook</span>.
+        This is me testing the <span class="less-cool-word">Webhooks</span>.
+        Yay!
       </summary>
       <a class="gh-icon" href="https://github.com/aliAljaffer"
         ><svg
