--- a/website/index.html
+++ b/website/index.html
@@ -25,7 +25,7 @@
         us create our own image with
         <span class="less-cool-word">THIS!</span> website on it.<br />
         This is me testing the <span class="less-cool-word">Webhooks</span>.
-        Maybe yay...?
+        <span class="cool-word">Maybe yay...??</span>
       </summary>
       <a class="gh-icon" href="https://github.com/aliAljaffer"
         ><svg
