Added cool word

--- a/website/index.html
+++ b/website/index.html
@@ -25,7 +25,8 @@
         us create our own image with
         <span class="less-cool-word">THIS!</span> website on it.<br />
         This is me testing the <span class="less-cool-word">Webhooks</span>.
-        <span class="cool-word">Maybe yay...??!</span>
+        <br />
+        Look at this <span class="cool-word">COOL WORD!</span>
       </summary>
       <a class="gh-icon" href="https://github.com/aliAljaffer"
         ><svg
